@@ -20,7 +20,9 @@ release 0.14.4
 	* fixed bug when force-checking a torrent with partial pieces
 	* fixed memory leak in disk cache
 	* fixed torrent file path vulnerability
-        * fixed upnp
+	* fixed upnp
+	* fixed bug when dealing with clients that drop requests (i.e. BitComet)
+	  fixes assert as well
 
 release 0.14.3
 
